[workspace.package]
version = "0.1.0"
edition = "2021"
include = ["src/**/*.rs", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members=[
    "consensus",
    "consensus/reachability",
    "consensus/types",
    "database",
    "consensus/ghostdag",
    "smolstc",
]

default-members = [
    "consensus",
    "consensus/reachability",
    "consensus/types",
    "database",
    "consensus/ghostdag",
]

[workspace.dependencies]
starcoin-network = {git = "https://github.com/jackzhhuang/starcoin",rev = "9cb07f31862c97b3cd1783b95bac2bff71b6d014"}
starcoin-storage = {git = "https://github.com/jackzhhuang/starcoin",rev = "9cb07f31862c97b3cd1783b95bac2bff71b6d014"}
starcoin-logger = {git = "https://github.com/jackzhhuang/starcoin",rev = "9cb07f31862c97b3cd1783b95bac2bff71b6d014"}
starcoin-config = {git = "https://github.com/jackzhhuang/starcoin",rev = "9cb07f31862c97b3cd1783b95bac2bff71b6d014"}
bcs-ext = { git = "https://github.com/jackzhhuang/starcoin",rev = "9cb07f31862c97b3cd1783b95bac2bff71b6d014"}
sp-utils = { git = "https://github.com/jackzhhuang/starcoin",rev = "9cb07f31862c97b3cd1783b95bac2bff71b6d014"}
network-p2p = { git = "https://github.com/jackzhhuang/starcoin",rev = "9cb07f31862c97b3cd1783b95bac2bff71b6d014"}
network-p2p-types = { git = "https://github.com/jackzhhuang/starcoin",rev = "9cb07f31862c97b3cd1783b95bac2bff71b6d014"}
network-p2p-derive = { git = "https://github.com/jackzhhuang/starcoin",rev = "9cb07f31862c97b3cd1783b95bac2bff71b6d014"}
network-p2p-core = { git = "https://github.com/jackzhhuang/starcoin",rev = "9cb07f31862c97b3cd1783b95bac2bff71b6d014"}
sc-peerset = { git = "https://github.com/jackzhhuang/starcoin",rev = "9cb07f31862c97b3cd1783b95bac2bff71b6d014"}
starcoin-service-registry = { git = "https://github.com/jackzhhuang/starcoin",rev = "9cb07f31862c97b3cd1783b95bac2bff71b6d014"}
stream-task = { git = "https://github.com/jackzhhuang/starcoin",rev = "9cb07f31862c97b3cd1783b95bac2bff71b6d014"}
starcoin-accumulator = {git = "https://github.com/jackzhhuang/starcoin",rev = "9cb07f31862c97b3cd1783b95bac2bff71b6d014"}
starcoin-types = {git = "https://github.com/jackzhhuang/starcoin",rev = "9cb07f31862c97b3cd1783b95bac2bff71b6d014"}
rocksdb = { default-features = false, features = ["lz4"], version = "0.21.0" }
bincode = { version = "1", default-features = false }
faster-hex = "0.6"
indexmap = "1.9.1"
itertools = "0.10"
num_cpus = "1.15.0"
parking_lot = "0.12"
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8"
serde = { version = "1", features = ["derive", "rc"] }
thiserror = "1"
tempfile = "3.3"
database = { path = "database" }
consensus-types = {path = "consensus/types"}
ghostdag={path = "consensus/ghostdag"}
reachability = {path = "consensus/reachability"}
schemars = { git = "https://github.com/starcoinorg/schemars", rev = "9b3705780b8fe9c8676ff82919869ba7405b1062" }
starcoin-crypto = {git = "https://github.com/starcoinorg/starcoin-crypto", rev="e19c5631c8f3c39730850080c196e0206834545f"}
hex = "0.4"
anyhow = "~1"
