[package]
name = "database"
version.workspace = true
edition.workspace = true

[dependencies]
rocksdb.workspace = true
serde.workspace = true
bincode.workspace = true
indexmap.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
rand.workspace = true
faster-hex.workspace = true
itertools.workspace = true
num_cpus.workspace = true

[dev-dependencies]
starcoin-crypto.workspace = true