[package]
name = "smolstc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcs-ext = { workspace = true }
sp-utils = { workspace = true }
network-p2p = { workspace = true }
network-p2p-types = { workspace = true }
network-p2p-derive = { workspace = true }
network-p2p-core = { workspace = true }
sc-peerset = { workspace = true }
starcoin-service-registry = { workspace = true }
starcoin-types = { workspace = true }
starcoin-crypto = { workspace = true }
rand = "0.8"
futures-core = "0.3.4"
## tokio = { version = "^1", features = ["full"] }
## async-std = "1.12.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }
futures = "0.3.12"
serde = "1.0.130"
serde_bytes = "0.11"
anyhow = "~1"
actix = "0.13"
reachability = { path = "../consensus/reachability" }
consensus-types = { path = "../consensus/types" }
consensus = { path = "../consensus" }
database = { path = "../database" }
parking_lot = "0.12"
# starcoin-crypto = {git = "https://github.com/starcoinorg/starcoin-crypto", rev="e19c5631c8f3c39730850080c196e0206834545f"}
# starcoin-crypto = { workspace = true }
rocksdb = "0.21.0"
ghostdag = { path = "../consensus/ghostdag" }