[dependencies]
futures = { workspace = true }
futures-core = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
prometheus = { workspace = true }
simple-stopwatch = { workspace = true }

[features]
default = ["metered"]
metered = []

[package]
name = "sp-utils"
description = "I/O for Substrate runtimes"
edition = { workspace = true }
version = "1.13.4"
