[package]
name = "reachability"
version.workspace = true
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
database.workspace = true
starcoin-crypto.workspace = true
consensus-types.workspace = true
serde.workspace = true
itertools.workspace = true
parking_lot.workspace = true
rocksdb.workspace = true
starcoin-storage.workspace = true
