[package]
name = "consensus-types"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starcoin-crypto.workspace = true
serde.workspace = true
database.workspace = true
rocksdb.workspace = true
starcoin-types.workspace = true