[package]
name = "consensus-types"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starcoin-crypto.workspace = true
starcoin-types.workspace = true
serde.workspace = true
itertools.workspace = true