[package]
description = "Connectivity manager based on reputation"
documentation = "https://docs.rs/sc-peerset"
edition = { workspace = true }
name = "sc-peerset"
version = "1.13.4"

[dependencies]
futures = { workspace = true }
libp2p = { default-features = false, workspace = true }
log = { workspace = true }
serde_json = { features = ["arbitrary_precision"], workspace = true }
wasm-timer = { workspace = true }
sp-utils = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
